--- a/View/produto.html
+++ b/View/produto.html
@@ -13,7 +13,7 @@
         <input type="text" name="idFornecedor" required>
         <br>-->
 
-        <label for="codigo">codigo:</label>
+        <label for="codigo">codigo do produto:</label>
         <input type="text" name="codigo" maxlength="5" required>
         <br>
         <label for="descricao">descricao:</label>
