alteração label preço de venda

--- a/View/produto.html
+++ b/View/produto.html
@@ -19,7 +19,7 @@
         <label for="descricao">descricao:</label>
         <input type="text" name="descricao" maxlength="150" required>
         <br>
-        <label for="preco">preco:</label>
+        <label for="preco">preco de venda:</label>
         <input type="text" name="preco" maxlength="20" required>
         <br>
         <label for="precoCusto">preco Custo:</label>
