--- a/View/produto.html
+++ b/View/produto.html
@@ -25,7 +25,7 @@
         <label for="precoCusto">preco Custo:</label>
         <input type="text" name="precoCusto" maxlength="20" required>
         <br>
-        <label for="estoque">estoque:</label>
+        <label for="estoque">estoque de produtos:</label>
         <input type="text" name="estoque" maxlength="20" required>
         <br>
         <label for="tipo">tipo:</label>
