alteração nome do cliente

--- a/View/cliente.html
+++ b/View/cliente.html
@@ -10,7 +10,7 @@
     <!-- Formulário de cadastro de clientes -->
     <form action="/cliente/cadastrar" method="POST">
       <fieldset>
-        <label for="nome">Nome:</label>
+        <label for="nome">Nome do cliente:</label>
         <input type="text" name="nome" required>
         <br>
         <label for="cpf">CPF:</label>
