alteracao label telefone do cliente

--- a/View/cliente.html
+++ b/View/cliente.html
@@ -16,7 +16,7 @@
         <label for="cpf">CPF:</label>
         <input type="text" name="cpf" required>
         <br>
-        <label for="telefone">Telefone:</label>
+        <label for="telefone">Telefone do cliente:</label>
         <input type="text" name="telefone" required>
         <br>
         <button type="submit" class="botao">Cadastrar Cliente</button>
