--- a/View/carro.html
+++ b/View/carro.html
@@ -11,7 +11,7 @@
         <label for="placa">Placa do carro:</label>
         <input type="text" name="placa" required>
         <br>
-        <label for="modelo">Modelo:</label>
+        <label for="modelo">Modelo do carro:</label>
         <input type="text" name="modelo" required>
         <br>
         <label for="marca">Marca:</label>
