--- a/View/carro.html
+++ b/View/carro.html
@@ -17,7 +17,7 @@
         <label for="marca">Marca do carro:</label>
         <input type="text" name="marca" required>
         <br>
-        <label for="cor">Cor:</label>
+        <label for="cor">Cor do carro:</label>
         <input type="text" name="cor" required>
         <br>
         <button type="submit" class="botao">Cadastrar Carro</button>
