alteração label tipo de produto

--- a/View/produto.html
+++ b/View/produto.html
@@ -28,7 +28,7 @@
         <label for="estoque">estoque de produtos:</label>
         <input type="text" name="estoque" maxlength="20" required>
         <br>
-        <label for="tipo">tipo:</label>
+        <label for="tipo">tipo [produto ou serviço]:</label>
         <input type="text" name="tipo" required>
         <br>
         <button type="submit" class="btn btn-primary mt-3">Cadastrar Produto </button>
