--- a/View/Login/register.html
+++ b/View/Login/register.html
@@ -42,7 +42,7 @@
                 {% else %}
 
                   <div class="card-body">
-                    <form role="form" method="post" action="">
+                    <form role="form" method="post" action="/registrar">
 
                       {{ form.hidden_tag() }} 
 
@@ -54,6 +54,9 @@
                       </div>
                       <div class="input-group input-group-outline mb-3">
                         {{ form.password(class="form-control", type="password", placeholder="Senha") }}
+                      </div>
+                      <div class="input-group input-group-outline mb-3">
+                        {{ form.cnpj(class="form-control", placeholder="Digite o CNPJ") }}
                       </div>
                       <div class="form-check form-check-info text-start ps-0">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
