--- a/View/carro.html
+++ b/View/carro.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base-fullscreen.html" %}
 
 
-{% block title %} Entrar {% endblock %} 
+{% block title %} Cadastro Carro {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -9,7 +9,7 @@
 {% block content %}
     
   <div class="page-header align-items-start min-vh-100" 
-        style="background-image: url('/static/assets/img/illustrations/carrostecnologicos.autocompara.jpg'); background-size: cover; background-position: center;">
+        style="background-image: url('/static/assets/img/illustrations/fundo-de-ficcao-cientifica-futurista-moderno.jpg'); background-size: cover; background-position: center;">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container my-auto" style="height: 600px;">
       <div class="row">
@@ -38,7 +38,7 @@
                     <div class="form-row">
                       <div class="form-group col-md-6">
                         <label for="id cliente">ID Cliente:</label>
-                        <input type="text" class="form-control" name="id cliente" required>
+                        <input type="text" class="form-control" name="id_cliente" required>
                       </div>
 
                     <div class="form-row">
@@ -65,12 +65,12 @@
                       </div>
 
                       <div class="form-group col-md-6">
-                        <label for="ano fabricacao">Ano Fabricação:</label>
-                        <input type="text" class="form-control" name="ano fabricacao" required>
+                        <label for="ano_fabricacao">Ano Fabricação:</label>
+                        <input type="text" class="form-control" name="ano_fabricacao" required>
                       </div>
                       <div class="form-group col-md-6">
-                        <label for="ano modelo">Ano Modelo:</label>
-                        <input type="text" class="form-control" name="ano modelo" required>
+                        <label for="ano_modelo">Ano Modelo:</label>
+                        <input type="text" class="form-control" name="ano_modelo" required>
                       </div>
                      </div>
                   
@@ -95,10 +95,7 @@
               </fieldset>
       
                 <br>
-            </div>
-
-
-    {% include 'includes/footer-fullscreen.html' %}
+            </div>  
 
   </div>
 
