--- a/View/includes/fixed-plugin.html
+++ b/View/includes/fixed-plugin.html
@@ -52,7 +52,7 @@
         </div>
         <hr class="horizontal dark my-3">
         <div class="mt-2 d-flex">
-          <h6 class="mb-0">Claro / Escuro</h6>
+          <h6 class="mb-0">Light / Dark</h6>
           <div class="form-check form-switch ps-0 ms-auto my-auto">
             <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
           </div>
