--- a/View/includes/sidebar.html
+++ b/View/includes/sidebar.html
@@ -7,7 +7,7 @@
         <span class="ms-1 font-weight-bold text-white">Oficina.py</span>
       </a>
     </div>
-    <hr class="horizontal light mt-0 mb-2">
+    <hr class="horizontal light mt-s0 mb-2">
     <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -21,42 +21,57 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-white {% if 'tables' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/tables">
+             href="/ordemServico">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
-            <span class="nav-link-text ms-1">Tabelas</span>
+            <span class="nav-link-text ms-1">O.S.</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white {% if 'billing' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/billing">
+             href="/cliente">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">receipt_long</i>
+              <i class="material-icons opacity-10">table_view</i>
             </div>
-            <span class="nav-link-text ms-1">Contas</span>
+            <span class="nav-link-text ms-1">Clientes</span>
           </a>
         </li>
                
         <li class="nav-item">
           <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/notifications">
+             href="/carro">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">notifications</i>
+              <i class="material-icons opacity-10">table_view</i>
             </div>
-            <span class="nav-link-text ms-1">Notificações</span>
+            <span class="nav-link-text ms-1">Carros</span>
           </a>
         </li>
-        <li class="nav-item mt-3">
-          <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
+        <li class="nav-item">
+          <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}" 
+             href="/produto">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">table_view</i>
+            </div>
+            <span class="nav-link-text ms-1">Produtos</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}" 
+             href="/usuario">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">table_view</i>
+            </div>
+            <span class="nav-link-text ms-1">Usuarios</span>
+          </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white {% if 'profile' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/profile">
+             href="/oficina">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">person</i>
             </div>
-            <span class="nav-link-text ms-1">Perfil</span>
+            <span class="nav-link-text ms-1">Oficina</span>
           </a>
         </li>
         <li class="nav-item">
