--- a/View/Carros/scripts.html
+++ b/View/Carros/scripts.html
@@ -1,6 +1,6 @@
 <script>
 
-    function openModal(id) {
+    function openModalCarros(id) {
 
       try{
           
@@ -49,7 +49,7 @@
 
       }
 
-    function closeModal() {
+    function closeModalCarros() {
         document.getElementById("modalCarro").style.display = "none";
       }
 
