--- a/View/index.html
+++ b/View/index.html
@@ -21,8 +21,9 @@
               </div>
             </div>
             <hr class="dark horizontal my-0">
-            <div class="card-footer p-3">
+            <div class="card-footer p-3 d-flex justify-content-between align-items-center">
               <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+55% </span>ultimo mes</p>
+              <p class="mb-0"> Mensal <span class="text-success text-sm font-weight-bolder">R$ 15.324,22</span></p>
             </div>
           </div>
         </div>
@@ -33,13 +34,14 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Prestadores</p>
+                <p class="text-sm mb-0 text-capitalize">Serviços em aberto</p>
                 <h4 class="mb-0">3</h4>
               </div>
             </div>
             <hr class="dark horizontal my-0">
-            <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+3% </span>ultimo mes</p>
+            <div class="card-footer p-3 d-flex justify-content-between align-items-center"> <!-- Container flexível -->
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+3% </span>último mês</p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">R$ 5.324,50</span></p>
             </div>
           </div>
         </div>
@@ -66,14 +68,19 @@
               <div class="icon icon-lg icon-shape bg-gradient-info shadow-info text-center border-radius-xl mt-n4 position-absolute">
                 <i class="material-icons opacity-10">money</i>
               </div>
-              <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Serviços</p>
-                <h4 class="mb-0">R$ 10123,50</h4>
+              <div class="d-flex justify-content-between"> <!-- Contêiner flexível -->
+                <div style="margin-left: 90px;"> <!-- Adicionando margem esquerda -->
+                  <p class="text-sm mb-0 text-capitalize">Receita Anual</p>
+                  <h4 class="mb-0">R$ 78.567</h4>
+                </div>
+                <div> <!-- Contêiner flexível para Despesa Anual -->
+                  <p class="text-sm mb-0 text-capitalize">Despesa Anual</p>
+                  <h4 class="mb-0">R$ 50.324</h4>
+                </div>
               </div>
             </div>
-            <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span> ultimo mes</p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+36% </span> Rentabilidade</p>
             </div>
           </div>
         </div>
