--- a/View/Carros/modal.html
+++ b/View/Carros/modal.html
@@ -1,6 +1,6 @@
 <div id="modalCarro" class="modal">
   <div class="modal-content">
-      <span class="close" onclick="closeModal()">&times;</span>
+      <span class="close" onclick="closeModalCarros()">&times;</span>
         <form action="/carro/cadastrar" method="post">
         <fieldset>
           <form>              
