--- a/View/Clientes/cliente.html
+++ b/View/Clientes/cliente.html
@@ -31,7 +31,7 @@
                   <tr>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Fone / Endereço</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Cor / Ano</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Numero / Bairro</th>
                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
                     <th class="text-secondary opacity-7"></th>
                   </tr>
