Criação do Modal, Produto e Scripts de "Produtos" e ajuste do scripts do "Carro"

--- a/View/Carros/carro.html
+++ b/View/Carros/carro.html
@@ -31,7 +31,7 @@
                   <tr>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Placa / Cliente</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Modelo / Marca</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Cor / Ano</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Cor / Ano</th>
                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
                     <th class="text-secondary opacity-7"></th>
                   </tr>
