--- a/View/Usuarios/scripts.html
+++ b/View/Usuarios/scripts.html
@@ -44,7 +44,7 @@
             //document.getElementsByName('data_cadastro')[0].value = '';
             //document.getElementsByName('data_atualizacao')[0].value = '';
   
-            document.getElementById('modalUsurio').style.display = 'block';
+            document.getElementById('modalUsuario').style.display = 'block';
   
           return;
         }catch(e){
