--- a/View/Usuarios/usuario.html
+++ b/View/Usuarios/usuario.html
@@ -28,11 +28,11 @@
               <table class="table align-items-center mb-0">
                 <thead>
                   <tr>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Login</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Senha</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Tipo</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ativo</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nome</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Login</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Senha</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Tipo</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Ativo</th>
                     <th class="text-secondary opacity-7"></th>
                   </tr>
                 </thead>
