--- a/View/Usuarios/modal.html
+++ b/View/Usuarios/modal.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModalUsuarios()">&times;</span>
             <form action="/usuario/cadastrar" method="post">
-            <fieldset>
+            <for>
                 <form>
 
                     <div class="form-row">
