--- a/View/Usuarios/scripts.html
+++ b/View/Usuarios/scripts.html
@@ -76,12 +76,12 @@
           }catch(e){
             alert('Erro ao preencher os campos' + e);
           }
-          document.getElementById('modalUsurio').style.display = 'block';
+          document.getElementById('modalUsuario').style.display = 'block';
       }
     }
   
     function closeModalUsuarios() {
-      document.getElementById("modalUsurio").style.display = "none";
+      document.getElementById("modalUsuario").style.display = "none";
     }
   
   </script>
